appId: org.wikipedia.alpha
tags:
  - smoke
  - regression
---
- launchApp
- tapOn:
    id: "org.wikipedia.alpha:id/search_container"
- inputText: "BrowserStack"
- assertVisible: "Software company based in India"
